@@ -162,20 +162,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|util
-operator|.
-name|Constants
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|document
 operator|.
 name|Document
@@ -206,47 +192,25 @@ specifier|public
 class|class
 name|IndexWriter
 block|{
-comment|/**    * Default value is 1000.  Use<code>org.apache.lucene.writeLockTimeout</code>    * system property to override.    */
+comment|/**    * Default value is 1,000.    */
 DECL|field|WRITE_LOCK_TIMEOUT
 specifier|public
+specifier|final
 specifier|static
 name|long
 name|WRITE_LOCK_TIMEOUT
 init|=
-name|Integer
-operator|.
-name|parseInt
-argument_list|(
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"org.apache.lucene.writeLockTimeout"
-argument_list|,
-literal|"1000"
-argument_list|)
-argument_list|)
+literal|1000
 decl_stmt|;
-comment|/**    * Default value is 10000.  Use<code>org.apache.lucene.commitLockTimeout</code>    * system property to override.    */
+comment|/**    * Default value is 10,000.    */
 DECL|field|COMMIT_LOCK_TIMEOUT
 specifier|public
+specifier|final
 specifier|static
 name|long
 name|COMMIT_LOCK_TIMEOUT
 init|=
-name|Integer
-operator|.
-name|parseInt
-argument_list|(
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"org.apache.lucene.commitLockTimeout"
-argument_list|,
-literal|"10000"
-argument_list|)
-argument_list|)
+literal|10000
 decl_stmt|;
 DECL|field|WRITE_LOCK_NAME
 specifier|public
@@ -266,122 +230,67 @@ name|COMMIT_LOCK_NAME
 init|=
 literal|"commit.lock"
 decl_stmt|;
-comment|/**    * Default value is 10.  Use<code>org.apache.lucene.mergeFactor</code>    * system property to override.    */
+comment|/**    * Default value is 10. Change using {@link #setMergeFactor(int)}.    */
 DECL|field|DEFAULT_MERGE_FACTOR
 specifier|public
-specifier|static
 specifier|final
+specifier|static
 name|int
 name|DEFAULT_MERGE_FACTOR
 init|=
-name|Integer
-operator|.
-name|parseInt
-argument_list|(
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"org.apache.lucene.mergeFactor"
-argument_list|,
-literal|"10"
-argument_list|)
-argument_list|)
+literal|10
 decl_stmt|;
-comment|/**    * Default value is 10.  Use<code>org.apache.lucene.minMergeDocs</code>    * system property to override.    */
+comment|/**    * Default value is 10. Change using {@link #setMaxBufferedDocs(int)}.    */
+DECL|field|DEFAULT_MAX_BUFFERED_DOCS
+specifier|public
+specifier|final
+specifier|static
+name|int
+name|DEFAULT_MAX_BUFFERED_DOCS
+init|=
+literal|10
+decl_stmt|;
+comment|/**    * @deprecated use {@link #DEFAULT_MAX_BUFFERED_DOCS} instead    */
 DECL|field|DEFAULT_MIN_MERGE_DOCS
 specifier|public
-specifier|static
 specifier|final
+specifier|static
 name|int
 name|DEFAULT_MIN_MERGE_DOCS
 init|=
-name|Integer
-operator|.
-name|parseInt
-argument_list|(
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"org.apache.lucene.minMergeDocs"
-argument_list|,
-literal|"10"
-argument_list|)
-argument_list|)
+name|DEFAULT_MAX_BUFFERED_DOCS
 decl_stmt|;
-comment|/**    * Default value is {@link Integer#MAX_VALUE}.    * Use<code>org.apache.lucene.maxMergeDocs</code> system property to override.    */
+comment|/**    * Default value is {@link Integer#MAX_VALUE}. Change using {@link #setMaxMergeDocs(int)}.    */
 DECL|field|DEFAULT_MAX_MERGE_DOCS
 specifier|public
-specifier|static
 specifier|final
+specifier|static
 name|int
 name|DEFAULT_MAX_MERGE_DOCS
 init|=
 name|Integer
 operator|.
-name|parseInt
-argument_list|(
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"org.apache.lucene.maxMergeDocs"
-argument_list|,
-name|String
-operator|.
-name|valueOf
-argument_list|(
-name|Integer
-operator|.
 name|MAX_VALUE
-argument_list|)
-argument_list|)
-argument_list|)
 decl_stmt|;
-comment|/**    * Default value is 10000.  Use<code>org.apache.lucene.maxFieldLength</code>    * system property to override.    */
+comment|/**    * Default value is 10,000. Change using {@link #setMaxFieldLength(int)}.    */
 DECL|field|DEFAULT_MAX_FIELD_LENGTH
 specifier|public
-specifier|static
 specifier|final
+specifier|static
 name|int
 name|DEFAULT_MAX_FIELD_LENGTH
 init|=
-name|Integer
-operator|.
-name|parseInt
-argument_list|(
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"org.apache.lucene.maxFieldLength"
-argument_list|,
-literal|"10000"
-argument_list|)
-argument_list|)
+literal|10000
 decl_stmt|;
-comment|/** The default value for {@link #getTermIndexInterval()}.  This is    * determined by the<code>org.apache.lucene.termIndexInterval</code> system    * property.  The default is 128.    */
+comment|/**    * Default value is 128. Change using {@link #setTermIndexInterval(int)}.    */
 DECL|field|DEFAULT_TERM_INDEX_INTERVAL
 specifier|public
-specifier|static
 specifier|final
+specifier|static
 name|int
 name|DEFAULT_TERM_INDEX_INTERVAL
 init|=
-name|Integer
-operator|.
-name|parseInt
-argument_list|(
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"org.apache.lucene.termIndexInterval"
-argument_list|,
-literal|"128"
-argument_list|)
-argument_list|)
+literal|128
 decl_stmt|;
 DECL|field|directory
 specifier|private
